[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
strum = "0.26"
strum_macros = "0.26"
weblog = "0.3.0"
wasm-bindgen = "0.2"
web-sys = "0.3.69"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
getrandom = {version = "0.2", features = ["js"] }
gloo-storage = "0.3.0"